styles: fix align

--- a/src/pages/AuthPage/AuthPage.module.scss
+++ b/src/pages/AuthPage/AuthPage.module.scss
@@ -38,6 +38,7 @@
 
 .googleSpan {
   display: flex;
+  align-items: center;
   gap: 10px;
 }
 
